kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentdz2
  namespace: homework
  labels:
    app: dz-volumes
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: web-server
        image: nginx
        ports:
          - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: shared-volume
          mountPath: /homework
        - name: nginx-config-volume
          mountPath: /etc/nginx   
          readOnly: true
        - name: myclaim
          mountPath: /homework/conf
          readOnly: true
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
      volumes:
      - name: shared-volume
        emptyDir: {}
      - name: myclaim
        configMap:
          name: configdz
      - name: nginx-config-volume
        configMap:
          name: config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
